# personal-Health2

./: GEMINI.md  README.md  config.yaml  main.py  pyproject.toml  requirements.txt  temp_hash_gen.py
features/analytics/: GEMINI.md  analytics.py
features/input_form/: GEMINI.md  input_form.py
features/introduction/: introduction.py
features/recommendations/: GEMINI.md  recommendations.py
features/reports/: GEMINI.md  reports.py
features/ui/: GEMINI.md  ui.py
features/visualization/: GEMINI.md  visualization.py
