[project]
name = "project01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fpdf2>=2.8.5",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "seaborn>=0.13.2",
    "streamlit>=1.51.0",
    "streamlit-authenticator>=0.4.2",
]
